tweaked link to zenodeo in single treatment template

--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -482,6 +482,7 @@ details p {
     position: sticky;
     top: 0px;
     background-color: white;
+    padding-bottom: 5px;
     z-index: 100;
 }
 .treatment h1 {
