made masonry width 99%

--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -240,6 +240,7 @@ footer img {
     -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;
+    width: 99%;
 }
 .item {
     width: 100%;
