--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -13,6 +13,8 @@ header {
     padding-top: 10px;
     background-color: #f5f5f5;
     border-bottom: 1px solid silver;
+    /* background-image: url('/img/bug.gif');
+    background-repeat: no-repeat; */
 }
 
 .title {
@@ -487,7 +489,7 @@ details p {
     z-index: 100;
 }
 .treatment h1 {
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-weight: 800;
     font-family: Georgia, Times, 'Times New Roman', serif;
     letter-spacing: 0px;
@@ -546,7 +548,9 @@ p.journal {
 }
 /* Larger than mobile */
 @media (min-width: 400px) {
-
+    .treatment h1 {
+        font-size: 2rem;
+    }
     .masonry {
         -moz-column-count: 2;
         -webkit-column-count: 2;
@@ -592,7 +596,9 @@ p.journal {
 
 /* Larger than desktop */
 @media (min-width: 1000px) {
-    
+    .treatment h1 {
+        font-size: 3rem;
+    }
     h3 {
         font-size: 16px;
     }
