--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -13,8 +13,8 @@ header {
     padding-top: 10px;
     background-color: #f5f5f5;
     border-bottom: 1px solid silver;
-    background-image: url('/img/bug.gif');
-    background-repeat: no-repeat;
+    /* background-image: url('/img/bug.gif');
+    background-repeat: no-repeat; */
 }
 
 .title {
